--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.4",
+    "readable-stream": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
