--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "readable-stream": "^3.6.2",
+    "formidable": "^1.2.2"
   }
 }
